[package]
authors = [
    "Junfeng Liu <china.liujunfeng@gmail.com>",
    "Emulator <emulator@hotmail.it>",
]
categories = ["text-processing"]
description = "A Rust library for PDF document manipulation."
documentation = "https://docs.rs/crate/lopdf/"
edition = "2021"
homepage = "https://github.com/J-F-Liu/lopdf"
keywords = ["pdf", "editing", "manipulation", "merge"]
license = "MIT"
name = "lopdf"
readme = "README.md"
repository = "https://github.com/J-F-Liu/lopdf.git"
version = "0.33.0"

[dependencies]
chrono = { version = "^0.4", optional = true, features = [
    "std",
    "clock",
], default-features = false }
encoding_rs = "0.8.32"
flate2 = { version = "^1.0", optional = true }
image = { version = "^0.24", optional = true }
hashlink = "^0.9"
itoa = "^1.0"
log = "^0.4"
md5 = "0.7.0"
miniz_oxide = { version = "^0.7.1", default-features = false, features = ["with-alloc"], optional = true }
no_std_io = { version = "^0.5", features = ["alloc"], optional = true }
nom = { version = "^7.1", default-features = false, features = ["alloc"], optional = true }
pom = { version = "^3.2", optional = true }
rayon = { version = "^1.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
spin = { version = "^0.9", default-features = false, features = ["mutex", "spin_mutex"], optional = true }
time = { version = "^0.3", features = ["formatting", "parsing"], optional = true }
weezl = { version = "^0.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3.3"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.0"
env_logger = "0.10"

# 'std' or 'alloc' must be enabled
# if 'std' and 'alloc' are enabled then 'std' is used

[features]
chrono_time = ["chrono"]
default = ["chrono_time", "nom_parser", "rayon", "std"]
embed_image = ["image"]
nom_parser = ["nom"]
pom_parser = ["pom"]
serde = ["dep:serde"]
std = ["flate2", "time"]
alloc = ["miniz_oxide", "no_std_io", "spin"]

[[example]]
name = "add_barcode"
required-features = ["std", "pom_parser"]

[[example]]
name = "create"
required-features = ["std"]

[[example]]
name = "extract_toc"
required-features = ["std", "serde"]

[[example]]
name = "extract_text"
required-features = ["std", "serde"]

[[example]]
name = "merge"
required-features = ["std"]

[[example]]
name = "print_annotations"
required-features = ["std"]

[[example]]
name = "rotate"
required-features = ["std", "nom_parser"]

[[test]]
name = "annotation"
required-features = ["std"]

[[test]]
name = "incremental_document"
required-features = ["std"]

[[test]]
name = "modify"
required-features = ["std", "pom_parser"]

[badges]
travis-ci = { repository = "J-F-Liu/lopdf" }
